--- a/templates/sell.html
+++ b/templates/sell.html
@@ -7,12 +7,8 @@
 </head>
 <body>
     <h1>欢迎使用超市管理系统</h1>
-    <!--<p><a href="/login">亲，使用前请登录哦</a></p>-->
-    {% if is_login %}
-    <p>你已经登录</p>
-    <p><a href="/after_login">1.进货</a></p>
-    {% else %}
-    <p><a href="/login">亲，请登录！</a></p>
-    {% endif %}
+    <p>出售商品</p>
+
+
 </body>
 </html>
